# litmus

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAYBOOK.md  README.md  REFACTOR_BLUEPRINT.md  REFACTOR_VISION.md  action.yml  pyproject.toml  setup.cfg
.claude/agents/: analyst.md  code-reviewer.md  data-architect.md  ops-pilot.md  pipeline-builder.md
.claude/agents/_internal/: litmus-advocate.md  litmus-architect.md  litmus-connector.md  litmus-inspector.md
.claude/skills/litmus-dashboard/: SKILL.md
.claude/skills/litmus-sync-notion/: SKILL.md
.claude/skills/litmus-transform/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  examples.yml  litmus-check.example.yml  litmus-test.example.yml  release-test.yml  release.yml
dbt_packages/litmus/: README.md  dbt_project.yml
dbt_packages/litmus/macros/: dispatch.sql  ensure_litmus_check_results_table.sql  ensure_litmus_history_table.sql  ensure_litmus_runs_table.sql  record_dbt_marker.sql  run_trust_checks.sql
dbt_packages/litmus/models/: litmus_check_results.sql  litmus_runs.sql
deploy/: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  DAGSTER_MODEL.md  RELEASING.md  ai-ask.md  ai-explanations.md  badges.md  bi-connectors.md  dbt-package.md  getting-started.md  github-webhook.md  json-schema.md  slack.md  spec-language.md
docs/examples/ecommerce-metrics/: conversion.metric  revenue.metric
docs/examples/saas-metrics/: churn.metric  mrr.metric  nrr.metric
examples/: README.md  litmus.yml
examples/alignment/: README.md  litmus.yml  run_demo.sh  seed.sql
examples/alignment/metrics/: monthly_revenue.metric
examples/alignment/queries/: aligned.sql  analytics.sql  engineering.sql  finance.sql
examples/badges/: README.md  index.html  snippets.md
examples/dbt-package-example/: .gitignore  README.md  dbt_project.yml  litmus.yml  packages.yml  profiles.yml
examples/dbt-package-example/metrics/: example_revenue.metric
examples/dbt-package-example/models/: orders.sql
examples/metrics/: aov.metric  cart_abandonment.metric  churn.metric  conversion_rate.metric  dau.metric  mrr.metric  revenue.metric  revenue.yaml  support_sla.metric
examples/sample_data/: seed.sql
examples/sample_pipeline/: README.md
examples/sample_pipeline/dashboards/: founder_weekly.py
examples/sample_pipeline/data/: customers.csv  orders.csv  web_events.csv
examples/sample_pipeline/metrics/: mart_customer_ltv.metric  mart_daily_revenue.metric
examples/sample_pipeline/pipelines/: customers.yaml  orders.yaml  web_events.yaml
examples/sample_pipeline/transforms/: mart_customer_ltv.sql  mart_daily_revenue.sql
examples/warehouses/: README.md
examples/warehouses/csv/: README.md  litmus.yml  sales.csv  sales.metric  setup.sh
examples/warehouses/duckdb/: README.md  litmus.yml  seed.sql  setup.sh  signups.metric
examples/warehouses/excel/: README.md  budget.metric  generate_workbook.py  (+2 more)
litmus/: __init__.py  api_push.py  cli.py  diagnostics.py  runtime.py  scaffold.py  tui.py  wizard.py
litmus/checks/: README.md  __init__.py  change.py  custom.py  distribution_shift.py  duplicate_rate.py  freshness.py  history.py  history_warehouse.py  null_rate.py  range.py  runner.py  schema_drift.py  volume.py
litmus/config/: __init__.py  settings.py
litmus/connectors/: README.md  __init__.py  base.py  bigquery.py  duckdb.py  postgres.py  snowflake.py  sqlite.py
litmus/dashboards/: __init__.py
litmus/generators/: README.md  __init__.py  dbt_exporter.py  dbt_importer.py  plain_english.py  share_html.py  sql_generator.py
litmus/integrations/: __init__.py  linear.py  notion.py  trust.py
litmus/parser/: README.md  __init__.py  ast_nodes.py  errors.py  lexer.py  parser.py
litmus/pipelines/: __init__.py  runner.py  sample.py
litmus/reporters/: README.md  __init__.py  console.py  html_reporter.py  json_reporter.py  markdown_reporter.py
litmus/spec/: __init__.py  metric_spec.py  validator.py
litmus/templates/: AGENTS.md  __init__.py  mcp.json
litmus_api/: __init__.py  config.py  db.py  deps.py  embed_svg.py  main.py  serializers.py
litmus_api/ai/: __init__.py  ask.py  explain.py
litmus_api/bi/: __init__.py  base.py  looker.py  tableau.py
litmus_api/jobs/: __init__.py  reconciliation.py
litmus_api/migrations/: __init__.py  alembic.ini  env.py
litmus_api/models/: __init__.py
litmus_api/routes/: ask.py  bi.py  embeds.py  metrics.py  runs.py  slack.py  webhooks.py
litmus_api/slack/: __init__.py  client.py  signatures.py
schemas/v1/: check-suite.schema.json
scripts/: setup.sh  verify-examples.sh
tests/: conftest.py  test_cli.py
tests/test_ai/: test_ask.py  test_explain.py
tests/test_api/: conftest.py  test_ask_route.py  test_bi.py  test_embed_badge.py  test_explain_route.py  test_lineage.py  test_migrations.py  test_push.py  test_reconcile_job.py  test_revisions.py  test_slack.py  test_webhook.py  test_wedge.py
tests/test_bi/: test_looker.py  test_tableau.py
tests/test_checks/: test_distribution_shift.py  test_duplicate_rate.py  test_freshness.py  test_history.py  test_history_warehouse.py  test_null_rate.py  test_range.py  test_runner_integration_new_rules.py  test_schema_drift.py  test_volume.py
tests/test_connectors/: test_sqlite_connector.py
tests/test_generators/: test_dbt_exporter.py  test_dbt_importer.py  test_share_html.py  test_sql_generator.py
tests/test_parser/: test_lexer.py  test_new_trust_rules.py  test_parser.py
tests/test_reporters/: test_console.py  test_json_schema_stability.py
ui/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
ui/components/: AskPanel.tsx  CodeBlock.tsx  CopyButton.tsx  HeroBadgeDemo.tsx  InstallTabs.tsx  LineageGraph.tsx  Nav.tsx  ReconciliationPanel.tsx  Section.tsx  SignoffChip.tsx  TrustBadge.tsx  TrustHistoryChart.tsx  WhyDidThisFail.tsx
ui/lib/: api.ts  ask.ts  fixtures.ts
(+55 files in other folders)
