[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litmus-data"
version = "0.5.0"
description = "Your AI data agents team — install, point at your data, and the agents handle ingestion, transforms, dashboards, and tests"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Litmus Contributors" }]
maintainers = [{ name = "Zinnober Haus", email = "zinnober.haus@gmail.com" }]
keywords = ["data", "ai-agents", "data-engineering", "etl", "analytics", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "duckdb>=1.0.0",
    # Streamlit powers `litmus dashboard`. Included by default because the
    # bootstrap promises "open the dashboard" works out of the box.
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
litmus = "litmus.cli:main"

[project.urls]
Homepage = "https://github.com/zinnoberHaus/litmus"
Source = "https://github.com/zinnoberHaus/litmus"
Documentation = "https://github.com/zinnoberHaus/litmus#readme"
Issues = "https://github.com/zinnoberHaus/litmus/issues"
Changelog = "https://github.com/zinnoberHaus/litmus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["litmus*"]

[tool.setuptools.package-data]
# Bundle templates so `pipx install litmus-data` users get a complete
# project scaffold (agents, skills, mcp config, sample pipeline) at runtime.
"litmus.templates" = [
    "mcp.json",
    "AGENTS.md",
    "claude/agents/*.md",
    "claude/skills/*/SKILL.md",
    "sample_pipeline/README.md",
    "sample_pipeline/data/*.csv",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
